--- a/app/src/main/res/layout/fragment_accident_history.xml
+++ b/app/src/main/res/layout/fragment_accident_history.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".AccidentHistoryFragment">
+    tools:context=".fragments.AccidentHistoryFragment">
 
     <!-- RecyclerView to display multiple accident cards -->
     <androidx.recyclerview.widget.RecyclerView
