--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activities.HomeActivity"
+    tools:context=".activities.dashboard.HomeActivity"
     tools:openDrawer="start">
 
     <LinearLayout
