--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/signUpPasswordEditTxt"
+        android:id="@+id/signupPasswordField"
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
@@ -17,13 +17,13 @@
         android:inputType="textPassword"
         android:paddingLeft="18dp"
         android:paddingRight="18dp"
-        app:layout_constraintEnd_toEndOf="@+id/signUpPhoneNumberEditTxt"
+        app:layout_constraintEnd_toEndOf="@+id/signupPhoneNumField"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/signUpPhoneNumberEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumberEditTxt" />
+        app:layout_constraintStart_toStartOf="@+id/signupPhoneNumField"
+        app:layout_constraintTop_toBottomOf="@+id/signupPhoneNumField" />
 
     <EditText
-        android:id="@+id/signUpEmailEditTxt"
+        android:id="@+id/signupEmailField"
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:layout_marginTop="64dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/signUpConfirmPasswordEditTxt"
+        android:id="@+id/signupConfirmPassField"
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
@@ -53,13 +53,13 @@
         android:inputType="textPassword"
         android:paddingLeft="18dp"
         android:paddingRight="18dp"
-        app:layout_constraintEnd_toEndOf="@+id/signUpPasswordEditTxt"
+        app:layout_constraintEnd_toEndOf="@+id/signupPasswordField"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/signUpPasswordEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordEditTxt" />
+        app:layout_constraintStart_toStartOf="@+id/signupPasswordField"
+        app:layout_constraintTop_toBottomOf="@+id/signupPasswordField" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/nextBtn"
+        android:id="@+id/signupNextButton"
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
@@ -72,14 +72,14 @@
         android:textColor="#FFFEFE"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/signUpConfirmPasswordEditTxt"
+        app:layout_constraintEnd_toEndOf="@+id/signupConfirmPassField"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/signUpConfirmPasswordEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPasswordEditTxt"
+        app:layout_constraintStart_toStartOf="@+id/signupConfirmPassField"
+        app:layout_constraintTop_toBottomOf="@+id/signupConfirmPassField"
         app:layout_constraintVertical_bias="0.029" />
 
     <EditText
-        android:id="@+id/signUpPhoneNumberEditTxt"
+        android:id="@+id/signupPhoneNumField"
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
@@ -89,13 +89,13 @@
         android:ems="10"
         android:hint="Phone Number"
         android:inputType="phone"
-        android:maxLength="11"
+        android:maxLength="13"
         android:paddingLeft="18dp"
         android:paddingRight="18dp"
-        app:layout_constraintEnd_toEndOf="@+id/signUpEmailEditTxt"
+        app:layout_constraintEnd_toEndOf="@+id/signupEmailField"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/signUpEmailEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/signUpEmailEditTxt" />
+        app:layout_constraintStart_toStartOf="@+id/signupEmailField"
+        app:layout_constraintTop_toBottomOf="@+id/signupEmailField" />
 
     <TextView
         android:id="@+id/textView2"
