--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/fgpNewPassEditTxt"
+        android:id="@+id/signupVerEmailOtpField"
         android:layout_width="353dp"
         android:layout_height="70dp"
         android:layout_marginBottom="16dp"
@@ -16,13 +16,13 @@
         android:maxLength="32"
         android:padding="18dp"
         android:paddingLeft="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/fgpConfirmPassEditTxt"
+        app:layout_constraintBottom_toTopOf="@+id/signupVerSmsOtpField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/fgpConfirmPassEditTxt"
+        android:id="@+id/signupVerSmsOtpField"
         android:layout_width="351dp"
         android:layout_height="70dp"
         android:layout_marginBottom="24dp"
@@ -33,12 +33,12 @@
         android:maxLength="32"
         android:padding="18dp"
         android:paddingLeft="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/fgpSubmitBtn"
+        app:layout_constraintBottom_toTopOf="@+id/signupVerSubmitBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/fgpSubmitBtn"
+        android:id="@+id/signupVerSubmitBtn"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginBottom="384dp"
@@ -56,7 +56,7 @@
         android:text="CHANGED PASSWORD"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/fgpNewPassEditTxt"
+        app:layout_constraintBottom_toTopOf="@+id/signupVerEmailOtpField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
