--- a/app/src/main/res/layout/fragment_forgot_password_verification.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_verification.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/signupVerEmailOtpField"
+        android:id="@+id/verEmailOtpField"
         android:layout_width="353dp"
         android:layout_height="70dp"
         android:layout_marginTop="64dp"
@@ -22,32 +22,32 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/signupVerResendEmailOtpLbl"
+        android:id="@+id/verResendEmailOtpLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="RESEND OTP"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/signupVerEmailOtpField"
+        app:layout_constraintEnd_toEndOf="@+id/verEmailOtpField"
         app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="@+id/signupVerEmailOtpField"
-        app:layout_constraintTop_toBottomOf="@+id/signupVerEmailOtpField" />
+        app:layout_constraintStart_toStartOf="@+id/verEmailOtpField"
+        app:layout_constraintTop_toBottomOf="@+id/verEmailOtpField" />
 
     <TextView
-        android:id="@+id/signupVerEmailTimerLbl"
+        android:id="@+id/verEmailTimerLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="30"
         android:textColor="#E83A3A"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/signupVerEmailOtpField"
+        app:layout_constraintEnd_toEndOf="@+id/verEmailOtpField"
         app:layout_constraintHorizontal_bias="0.972"
-        app:layout_constraintStart_toStartOf="@+id/signupVerEmailOtpField"
-        app:layout_constraintTop_toBottomOf="@+id/signupVerEmailOtpField" />
+        app:layout_constraintStart_toStartOf="@+id/verEmailOtpField"
+        app:layout_constraintTop_toBottomOf="@+id/verEmailOtpField" />
 
     <EditText
-        android:id="@+id/signupVerSmsOtpField"
+        android:id="@+id/verSmsOtpField"
         android:layout_width="351dp"
         android:layout_height="70dp"
         android:layout_marginTop="84dp"
@@ -58,44 +58,44 @@
         android:maxLength="6"
         android:padding="18dp"
         android:paddingLeft="18dp"
-        app:layout_constraintEnd_toEndOf="@+id/signupVerEmailOtpField"
-        app:layout_constraintStart_toStartOf="@+id/signupVerEmailOtpField"
-        app:layout_constraintTop_toBottomOf="@+id/signupVerEmailOtpField" />
+        app:layout_constraintEnd_toEndOf="@+id/verEmailOtpField"
+        app:layout_constraintStart_toStartOf="@+id/verEmailOtpField"
+        app:layout_constraintTop_toBottomOf="@+id/verEmailOtpField" />
 
     <TextView
-        android:id="@+id/signupVerResendSmsOtpLbl"
+        android:id="@+id/verResendSmsOtpLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="RESEND OTP"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/signupVerSmsOtpField"
+        app:layout_constraintEnd_toEndOf="@+id/verSmsOtpField"
         app:layout_constraintHorizontal_bias="0.057"
-        app:layout_constraintStart_toStartOf="@+id/signupVerSmsOtpField"
-        app:layout_constraintTop_toBottomOf="@+id/signupVerSmsOtpField" />
+        app:layout_constraintStart_toStartOf="@+id/verSmsOtpField"
+        app:layout_constraintTop_toBottomOf="@+id/verSmsOtpField" />
 
     <TextView
-        android:id="@+id/signupVerSmsTimerLbl"
+        android:id="@+id/verSmsTimerLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="30"
         android:textColor="#E83A3A"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/signupVerSmsOtpField"
+        app:layout_constraintEnd_toEndOf="@+id/verSmsOtpField"
         app:layout_constraintHorizontal_bias="0.975"
-        app:layout_constraintStart_toStartOf="@+id/signupVerSmsOtpField"
-        app:layout_constraintTop_toBottomOf="@+id/signupVerSmsOtpField" />
+        app:layout_constraintStart_toStartOf="@+id/verSmsOtpField"
+        app:layout_constraintTop_toBottomOf="@+id/verSmsOtpField" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signupVerSubmitBtn"
+        android:id="@+id/verSubmitBtn"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="36dp"
         android:text="SUBMIT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupVerSmsOtpField" />
+        app:layout_constraintTop_toBottomOf="@+id/verSmsOtpField" />
 
     <TextView
         android:id="@+id/textView3"
